--- a/src/components/Calculator.css
+++ b/src/components/Calculator.css
@@ -2,7 +2,7 @@
 
 *{
     font-family: 'Roboto', sans-serif;
-    font-size: 10px;
+    font-size: 20px;
 }
 
 body {
@@ -36,4 +36,45 @@ input[type="text"] {
     background-color: #10111600;
     border: 0px;
     color: #ffffff;
+    text-align: right;
+    font-size: 25px;
+    font-weight: 500;
+    letter-spacing: 1px;
+}
+
+#clear {
+    grid-column: 1/3;
+    grid-row: 1;
+    color: #262834;
+}
+
+#equal {
+    grid-column: 3/5;
+    grid-row: 5;
+    color: #262834;
+}
+
+#backspace {
+    color: #262834;
+}
+
+button {
+    border: none;
+    margin: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+    background: #262834;
+    color: #ffffff;
+    font-weight: 500;
+}
+
+input:focus,
+input:active,
+button:focus,
+button:active {
+    outline: none;
+}
+
+.highlight {
+    background: #56cbdb;
 }
