--- a/src/components/ToggleSwitch.css
+++ b/src/components/ToggleSwitch.css
@@ -1,193 +1,107 @@
-.toggle-container{
-    display: block;
-    float: right;
-    margin-top: 10%;
-    margin-right: 300%;
-}
-
-/* Default */
-.theme {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-tap-highlight-color: transparent;
-}
-
-.theme__fill,
-.theme__icon {
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-
-.theme__fill {
-  background-color: var(--bg);
-  display: block;
-  mix-blend-mode: difference;
-  position: fixed;
-  inset: 0;
-  height: 100%;
-  -webkit-transform: translateX(-100%);
-  -ms-transform: translateX(-100%);
-  transform: translateX(-100%);
-}
-
-.theme__icon,
-.theme__toggle {
-  z-index: 1;
-}
-
-
-.theme__label,
-.theme__toggle,
-.theme__toggle-wrap {
+.switch {
+  font-size: 17px;
   position: relative;
+  display: inline-block;
+  width: 64px;
+  height: 34px;
 }
 
-.theme__toggle,
-.theme__toggle:before {
-  display: block;
-}
-
-.theme__toggle {
-  background-color: hsl(48, 90%, 55%);
-  border-radius: 25% / 50%;
-  -webkit-box-shadow: 0 0 0 0.125em var(--primaryT);
-  box-shadow: 0 0 0 0.125em var(--primaryT);
-  padding: 0.25em;
-  width: 3em;
-  height: 1.5em;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  -webkit-transition: background-color var(--transDur) ease-in-out,
-    -webkit-box-shadow 0.15s ease-in-out,
-    -webkit-transform var(--transDur) ease-in-out;
-  transition: background-color var(--transDur) ease-in-out,
-    -webkit-box-shadow 0.15s ease-in-out,
-    -webkit-transform var(--transDur) ease-in-out;
-  transition: background-color var(--transDur) ease-in-out,
-    box-shadow 0.15s ease-in-out, transform var(--transDur) ease-in-out;
-  transition: background-color var(--transDur) ease-in-out,
-    box-shadow 0.15s ease-in-out, transform var(--transDur) ease-in-out,
-    -webkit-box-shadow 0.15s ease-in-out,
-    -webkit-transform var(--transDur) ease-in-out;
-}
-
-.theme__toggle:before {
-  background-color: hsl(48, 90%, 85%);
-  border-radius: 50%;
-  content: "";
-  width: 0.9em;
-  height: 0.9em;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-
-.theme__toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.125em var(--primary);
-  box-shadow: 0 0 0 0.125em var(--primary);
-  outline: transparent;
-}
-
-/* Checked */
-.theme__toggle:checked {
-  background-color: hsl(198, 90%, 15%);
-}
-
-.theme__toggle:checked:before,
-.theme__toggle:checked ~ .theme__icon {
-  -webkit-transform: translateX(3em);
-  -ms-transform: translateX(3em);
-  transform: translateX(1.5em);
-}
-
-.theme__toggle:checked:before {
-  background-color: hsl(198, 90%, 55%);
-}
-
-.theme__toggle:checked ~ .theme__fill {
-  -webkit-transform: translateX(0);
-  -ms-transform: translateX(0);
-  transform: translateX(0);
-}
-
-.theme__toggle:checked ~ .theme__icon .theme__icon-part:nth-child(1) {
-  -webkit-box-shadow: 0.2em -0.2em 0 0.2em hsl(0, 0%, 100%) inset;
-  box-shadow: 0.2em -0.2em 0 0.2em hsl(0, 0%, 100%) inset;
-  -webkit-transform: scale(1);
-  -ms-transform: scale(1);
-  transform: scale(1);
-  top: 0.2em;
-  left: -0.2em;
-}
-
-.theme__toggle:checked ~ .theme__icon .theme__icon-part ~ .theme__icon-part {
+.switch input {
   opacity: 0;
+  width: 0;
+  height: 0;
 }
 
-.theme__toggle:checked ~ .theme__icon .theme__icon-part:nth-child(2) {
-  -webkit-transform: rotate(45deg) translateY(0.8em);
-  -ms-transform: rotate(45deg) translateY(0.8em);
-  transform: rotate(45deg) translateY(0.8em);
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #73C0FC;
+  transition: .4s;
+  border-radius: 30px;
 }
 
-.theme__toggle:checked ~ .theme__icon .theme__icon-part:nth-child(3) {
-  -webkit-transform: rotate(90deg) translateY(0.8em);
-  -ms-transform: rotate(90deg) translateY(0.8em);
-  transform: rotate(90deg) translateY(0.8em);
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 30px;
+  width: 30px;
+  border-radius: 20px;
+  left: 2px;
+  bottom: 2px;
+  z-index: 2;
+  background-color: #e8e8e8;
+  transition: .4s;
 }
 
-.theme__toggle:checked ~ .theme__icon .theme__icon-part:nth-child(4) {
-  -webkit-transform: rotate(135deg) translateY(0.8em);
-  -ms-transform: rotate(135deg) translateY(0.8em);
-  transform: rotate(135deg) translateY(0.8em);
+.sun svg {
+  position: absolute;
+  top: 6px;
+  left: 36px;
+  z-index: 1;
+  width: 24px;
+  height: 24px;
 }
 
-.theme__toggle:checked ~ .theme__icon .theme__icon-part:nth-child(5) {
-  -webkit-transform: rotate(180deg) translateY(0.8em);
-  -ms-transform: rotate(180deg) translateY(0.8em);
-  transform: rotate(180deg) translateY(0.8em);
+.moon svg {
+  fill: #73C0FC;
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  z-index: 1;
+  width: 24px;
+  height: 24px;
 }
 
-.theme__toggle:checked ~ .theme__icon .theme__icon-part:nth-child(6) {
-  -webkit-transform: rotate(225deg) translateY(0.8em);
-  -ms-transform: rotate(225deg) translateY(0.8em);
-  transform: rotate(225deg) translateY(0.8em);
+/* .switch:hover */.sun svg {
+  animation: rotate 15s linear infinite;
 }
 
-.theme__toggle:checked ~ .theme__icon .theme__icon-part:nth-child(7) {
-  -webkit-transform: rotate(270deg) translateY(0.8em);
-  -ms-transform: rotate(270deg) translateY(0.8em);
-  transform: rotate(270deg) translateY(0.8em);
-}
-
-.theme__toggle:checked ~ .theme__icon .theme__icon-part:nth-child(8) {
-  -webkit-transform: rotate(315deg) translateY(0.8em);
-  -ms-transform: rotate(315deg) translateY(0.8em);
-  transform: rotate(315deg) translateY(0.8em);
-}
-
-.theme__toggle:checked ~ .theme__icon .theme__icon-part:nth-child(9) {
-  -webkit-transform: rotate(360deg) translateY(0.8em);
-  -ms-transform: rotate(360deg) translateY(0.8em);
-  transform: rotate(360deg) translateY(0.8em);
-}
-
-.theme__toggle-wrap {
-  margin: 0 0.75em;
-}
-
-@supports selector(:focus-visible) {
-  .theme__toggle:focus {
-    -webkit-box-shadow: 0 0 0 0.125em var(--primaryT);
-    box-shadow: 0 0 0 0.125em var(--primaryT);
+@keyframes rotate {
+ 
+  0% {
+    transform: rotate(0);
   }
 
-  .theme__toggle:focus-visible {
-    -webkit-box-shadow: 0 0 0 0.125em var(--primary);
-    box-shadow: 0 0 0 0.125em var(--primary);
+  100% {
+    transform: rotate(360deg);
   }
+}
+
+/* .switch:hover */.moon svg {
+  animation: tilt 5s linear infinite;
+}
+
+@keyframes tilt {
+ 
+  0% {
+    transform: rotate(0deg);
+  }
+
+  25% {
+    transform: rotate(-10deg);
+  }
+
+  75% {
+    transform: rotate(10deg);
+  }
+
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+.input:checked + .slider {
+  background-color: #183153;
+}
+
+.input:focus + .slider {
+  box-shadow: 0 0 1px #183153;
+}
+
+.input:checked + .slider:before {
+  transform: translateX(30px);
 }
