--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,30 +1,46 @@
-/* Google chrome */
-@-webkit-keyframes svg-text-anim {
-  40% {
-    stroke-dashoffset: 0;
-    fill: transparent;
+svg {
+  /* font-family: 'Russo One', sans-serif; */
+  width: 100%;
+  height: 100%;
+}
+
+svg text {
+  text-transform: uppercase;
+  animation: stroke 7s infinite alternate;
+  stroke-width: 2;
+  stroke: #365fa0;
+  font-size: 5rem;
+}
+@keyframes stroke {
+  0% {
+    fill: rgba(252, 160, 13, 0);
+    stroke: #4dadfc;
+    stroke-dashoffset: 25%;
+    stroke-dasharray: 0 50%;
+    stroke-width: 2;
   }
-  60% {
-    stroke-dashoffset: 0;
-    fill: #c3f8ff;
+  70% {
+    fill: rgba(252, 160, 13, 0);
+    stroke: #000000;
+  }
+  80% {
+    fill: rgba(252, 160, 13, 0);
+    stroke: #000000;
+    stroke-width: 3;
   }
   100% {
-    stroke-dashoffset: 0;
-    fill: #c3f8ff;
+    fill: #000000;
+    stroke: #000000;
+    stroke-dashoffset: -25%;
+    stroke-dasharray: 50% 0;
+    stroke-width: 0;
   }
 }
-/* Most browsers */
-@keyframes svg-text-anim {
-  40% {
-    stroke-dashoffset: 0;
-    fill: transparent;
-  }
-  60% {
-    stroke-dashoffset: 0;
-    fill: #c3f8ff;
-  }
-  100% {
-    stroke-dashoffset: 0;
-    fill: #c3f8ff;
-  }
+
+#light {
+  color: black;
+}
+
+#dark {
+  color: white;
 }
