--- a/src/components/ToggleSwitch.css
+++ b/src/components/ToggleSwitch.css
@@ -1,9 +1,17 @@
+.toggle-container {
+  display: flex;
+  justify-content: end;
+  margin-bottom: 0.5rem;
+}
+
 .switch {
   font-size: 17px;
   position: relative;
   display: inline-block;
-  width: 64px;
-  height: 34px;
+  width: 60px;
+  height: 30px;
+  border-radius: 18px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .switch input {
@@ -19,7 +27,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #73C0FC;
+  background-color: #61b7ff;
   transition: .4s;
   border-radius: 30px;
 }
@@ -27,8 +35,8 @@
 .slider:before {
   position: absolute;
   content: "";
-  height: 30px;
-  width: 30px;
+  height: 25px;
+  width: 25px;
   border-radius: 20px;
   left: 2px;
   bottom: 2px;
@@ -39,21 +47,21 @@
 
 .sun svg {
   position: absolute;
-  top: 6px;
+  top: 5px;
   left: 36px;
   z-index: 1;
-  width: 24px;
-  height: 24px;
+  width: 20px;
+  height: 20px;
 }
 
 .moon svg {
   fill: #73C0FC;
   position: absolute;
-  top: 5px;
-  left: 5px;
+  top: 4px;
+  left: 4px;
   z-index: 1;
-  width: 24px;
-  height: 24px;
+  width: 20px;
+  height: 20px;
 }
 
 /* .switch:hover */.sun svg {
@@ -96,6 +104,7 @@
 
 .input:checked + .slider {
   background-color: #183153;
+  box-shadow: rgba(203, 202, 202, 0.411) 0px 3px 6px, rgba(206, 204, 204, 0.352) 0px 3px 6px;
 }
 
 .input:focus + .slider {
