--- a/src/App.css
+++ b/src/App.css
@@ -23,8 +23,8 @@
     background-color: #9DB2BF;
 }
 
-@media (max-width: 750px) {
+/* @media (max-width: 750px) {
     .app {
         width: fit-content;
     }
-}
+} */
